# ChefMind

./: .dockerignore  .env  .env.example  .eslintrc-auto-import.json  .eslintrc.cjs  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  FINAL_CLEANUP_SUMMARY.md  GITHUB_SECRETS_SETUP.md  GITIGNORE-UPDATE.md  LICENSE  MAINTENANCE_REPORT.md  PROJECT_CLEANUP_REPORT.md  PROJECT_STATUS.md  QUICK-START.md  README-TAURI.md  README.md  SECURITY.md  START-HERE.md  STATUS-REPORT.md  TASK_COMPLETION_SUMMARY.md  TAURI-STATUS.md  add-home-recipes.cjs  auto-imports.d.ts  clean-git-history.sh  cleanup-verification.md  components.d.ts  constraint-fix-test.html  constraint-test.html  debug-database.html  debug-favorites.html  debug-storage.html  debug.html  devtools-test.html  (+46 more)
.github/: FUNDING.yml  config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  pages.yml
docs/: AI_SERVICE_ARCHITECTURE.md  API_DOCUMENTATION.md  COMPONENT_GUIDE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  FINAL_PROJECT_REFACTOR_REPORT.md  PLATFORM_STORAGE.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  README.md
public/: manifest.json  sw.js
public/videos/: README.md
scripts/: capture-user-screenshots.spec.mjs  check-version-consistency.mjs  init-database.js  init-db-simple.cjs  reset-database.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src-tauri/: tauri.conf.json
src/components/: DebugPanel.vue  SimpleVideoPlayer.vue  VideoPlayer.vue
src/composables/: useAIConfig.ts  useI18n.ts  useNotification.ts  usePersonalizedRecommendations.ts  useUserBehaviorAnalytics.ts
src/config/: aiConfig.ts  sqlite.ts
src/data/: aiProviderPresets.ts  chineseDietaryGuidelines.ts  cookingMethods.ts  mockData.ts
src/models/: Favorite.ts  Recipe.ts  User.ts
src/router/: index.ts
src/services/: aiApiKeyService.ts  aiConfig.ts  aiPersonalizedNutritionService.ts  aiRecipeService.ts  aiResponseParser.ts  aiService.ts  analyticsService.ts  communityService.ts  favoritesService.ts  glmService.ts  localDataBackup.ts  nutritionAnalysisService.ts  personalizationService.ts  providerEndpoint.ts  ratingService.ts  recipeService.ts  searchHistoryService.ts  sessionService.ts  shoppingListService.ts  tauriDatabaseService.ts  tauriVideoService.ts  tcmConstitutionService.ts  testGLMAPI.ts  (+4 more)
tests/: README.md
(+182 files in other folders)
