[package]
name = "chefmind"
version = "3.0.0"
description = "ChefMind 智食谱 - AI驱动的智能菜谱生成平台"
authors = ["ChefMind Team"]
edition = "2021"

[lib]
name = "chefmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chefmind"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.8", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rustc_version = "0.4"
tauri-plugin-devtools = "2.0"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[profile.dev]
incremental = true
codegen-units = 256

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
